# soma

./: .gitignore  AGENT.md  CONTRIBUTING.md  MEMORY_DESIGN.md  NATIVE_BIGINT_PLAN.md  PAPER.md  README.md  SKILL.md  SOMA_PROVIDER_SIDECAR_SPEC.md  SOMA_PROVIDER_SPEC.md  SOMA_REFERENCE.md  SOMA_SPEC.md  SUM_TYPES_DESIGN.md  TARGET_SOMA_V1.md  VISION.md
bench/clbg_rust_ref/: Cargo.toml
bench/clbg_rust_ref/src/: fannkuch.rs  mandelbrot.rs  nbody.rs  pidigits.rs  spectral_norm.rs
compiler/: Cargo.toml
compiler/.soma_cache/native/: native_app_2839d9ebc093ce84.dylib  native_app_2839d9ebc093ce84.rs  native_app_3ae5434bcc7454bf.dylib  native_app_3ae5434bcc7454bf.rs  native_app_3fae5882b2fe40cd.dylib  native_app_3fae5882b2fe40cd.rs  native_app_f60842a2534a213c.rs  native_autocallpricing_4fa6507147892cf8.dylib  native_autocallpricing_4fa6507147892cf8.rs  native_t_0ba16d85f7148b4d.dylib  native_t_0ba16d85f7148b4d.rs  native_t_0c72d0543b980b92.dylib  native_t_0c72d0543b980b92.rs  native_t_141fd87dfd31279b.dylib  native_t_141fd87dfd31279b.rs  native_t_26306fabb4bc01dd.dylib  native_t_26306fabb4bc01dd.rs  native_t_288255917b1e628b.rs  native_t_2cdab79f800a44d7.dylib  native_t_2cdab79f800a44d7.rs  native_t_2e22f028ac4ebf7a.rs  native_t_44bbf9958fb78e54.dylib  native_t_44bbf9958fb78e54.rs  native_t_57c086dd90723dd5.dylib  native_t_57c086dd90723dd5.rs  native_t_83ccf40f3a87b3ba.dylib  native_t_83ccf40f3a87b3ba.rs  native_t_fd4a86c71ef77c0d.dylib  native_t_fd4a86c71ef77c0d.rs
compiler/src/: main.rs
compiler/src/ast/: mod.rs
compiler/tests/: agent_integration.rs  equivalence.rs  integration.rs  rigor_budget.rs  rigor_eventually_long_chain.rs  rigor_isolation.rs
docs/: V1.md  (+3 more)
(+1204 files in other folders)
