[package]
name = "soma"
version = "1.1.0"
edition = "2021"
description = "The Soma language compiler — fractal, declarative, agent-native"

[dependencies]
thiserror = "1"
miette = { version = "5", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-traits = "0.2"
tiny_http = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
ureq = { version = "2", features = ["json"] }
tungstenite = "0.21"
url = "2"
rustc-hash = "1"
